--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@prisma/client": "^5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.6",
