--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev",
+    "migrate:testdown": "rm  prisma/castlevaniatest.sqlite",
+    "test": "rm rm  prisma/castlevaniatest.sqlite & dotenv -e .env.test -- npx prisma migrate dev & dotenv -e .env.test jest",
     "dev": "nodemon -e ts,json src/server.ts"
   },
   "keywords": [],
@@ -14,6 +16,7 @@
     "@prisma/client": "^5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "zod": "^3.22.4"
   },
@@ -21,13 +24,18 @@
     "@types/chai": "^4.3.6",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.6",
     "@types/mocha": "^10.0.2",
     "@types/node": "^20.8.2",
     "@types/sinon": "^10.0.17",
+    "@types/supertest": "^2.0.15",
     "chai": "^4.3.10",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.4.1",
     "sinon": "^16.0.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
